syntax = "proto3";

option csharp_namespace = "Shared.Grpc.Messages";

import "google/protobuf/timestamp.proto";

package car_service;

message GenerateReportRequest {
    string user_id = 1;
    string order_id = 2; // all pending orders when not specified
    google.protobuf.Timestamp from_date = 3;
    google.protobuf.Timestamp to_date = 4;
}

message GenerateReportResponse {
    string report_id = 1;
    string status = 2; // PENDING, IN_PROGRESS, READY, FAILED
}

message GetReportStatusRequest {
    string report_id = 1;
}

message GetReportStatusResponse {
    string report_id = 1;
    string status = 2;
    string error_message = 3;
}

message GetReportDownloadLinkRequest {
    string report_id = 1; 
}

message GetReportDownloadLinkResponse {
    string report_id = 1;
    string download_url = 2;
    google.protobuf.Timestamp expires_at = 3;
}

message SendEmailWithReportRequest {
    string report_id = 1;
    repeated string users_ids = 2;
}

message SendEmailWithReportResponse {
    bool success = 1;
    string message = 2;
}